ajout icon et page d'administration

--- a/.gitignore
+++ b/.gitignore
@@ -9,8 +9,8 @@ tmp
 .env.production.local
 .env.development.local
 
-# Frontend assets compiled code
-public/assets
+
+public/users
 
 # Build tools specific
 npm-debug.log
