--- a/package.json
+++ b/package.json
@@ -60,8 +60,10 @@
     "@adonisjs/shield": "^8.1.0",
     "@adonisjs/static": "^1.1.1",
     "@adonisjs/vite": "^2.0.2",
+    "@iconify-json/uil": "^1.1.8",
     "@vinejs/vine": "^1.7.1",
     "better-sqlite3": "^9.4.3",
+    "edge-iconify": "^2.0.1",
     "edge.js": "^6.0.1",
     "flowbite": "^2.3.0",
     "jdenticon": "^3.2.0",
