--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "@adonisjs/shield": "^8.1.0",
     "@adonisjs/static": "^1.1.1",
     "@adonisjs/vite": "^2.0.2",
+    "@iconify-json/material-symbols": "^1.1.75",
     "@iconify-json/uil": "^1.1.8",
     "@vinejs/vine": "^1.7.1",
     "better-sqlite3": "^9.4.3",
