ajotu icone par defaut pour l'utilisateur

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@ tmp
 public/assets
 !public/assets/video-bg-720p.mp4
 public/users
+!public/users/default.png
 public/plantes
 !public/plantes/default.png
 
