--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,8 @@ LOG_LEVEL=info
 APP_KEY=3UnZCLC4QiqQfhIE3ONW2GQds1Ur1YCF
 NODE_ENV=development
 SESSION_DRIVER=cookie
+DB_HOST=127.0.0.1
+DB_PORT=3306
+DB_USER=root
+DB_PASSWORD=
+DB_DATABASE=
